--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGame.loader.js";
+      var loaderUrl = buildUrl + "/zalwicker2.github.io.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGame.data.br",
-        frameworkUrl: buildUrl + "/WebGame.framework.js.br",
-        codeUrl: buildUrl + "/WebGame.wasm.br",
+        dataUrl: buildUrl + "/zalwicker2.github.io.data.unityweb",
+        frameworkUrl: buildUrl + "/zalwicker2.github.io.framework.js.unityweb",
+        codeUrl: buildUrl + "/zalwicker2.github.io.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "zalwicker",
         productName: "PirateGame",
         productVersion: "1.0",
         showBanner: unityShowBanner,
