--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 		</style>
 	</head>
 	<body style="background-color:#111111; margin-left:16px">
-		<img src="https://www.shure.com/packs/media/images/shure_branding_clean-5f036c9a.svg" height="50px">
 		<h3>Version 1.1.0</h3>
 
 		<ul>
 			<li>Replaced all C++ code with Hexadecimal Machine Code</li>
 			<li>Replaced WinSparkle with LoseSparkle</li>
-			<li>Added support for Amazon Fire TV</li>
+			<li>Added support for Nintendo 64</li>
 			<li>Unbroke everything</li>
 		</ul>
 	</body>
