--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		<ul>
 			<li>Replaced all C++ code with Hexadecimal Machine Code</li>
 			<li>Replaced WinSparkle with LoseSparkle</li>
+			<li>Removed microphone support</li>
 			<li>Added support for Nintendo 64</li>
-			<li>Unbroke everything</li>
+			<li>Broke everything</li>
 		</ul>
 	</body>
 </html>
