--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
   <meta charset="utf-8">
   <title>Zach Alwicker</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
-  <app-root></app-root>
+  <div style="background: linear-gradient(-30deg, #272727, #423131);">
+    <app-root></app-root>
+  </div>
 </body>
 
 </html>
